# MicroservicesArchitecture

./: .env.example  .gitignore  ARCHITECTURE_DIAGRAMS.md  CLAUDE.md  CUSTOM_LOGGER_USAGE.md  DOCUMENTATION_UPDATE_SUMMARY.md  Directory.Build.props  Directory.Packages.props  Firebase-Ihsan-SDK-Key.json  INTEGRATION_TESTING_PROMPT.md  MINIMAL_API_MIGRATION.md  MULTI_TENANCY_GUIDE.md  MULTI_TENANCY_SUMMARY.md  MULTI_TENANT_DEPLOYMENT_GUIDE.md  MicroservicesArchitecture.sln  QUICK_ANSWER.md  README.md  SHARED_TESTING_ANALYSIS.md  SHARED_TESTING_MIGRATION.md  SINGLE_BUILD_MULTIPLE_DEPLOYMENTS.md  TENANT_AUTOMAPPER_PAGINATION_SUMMARY.md  TENANT_MIDDLEWARE_EXPLAINED.md  clean-project.bat  docker-compose.observability.yml  docker-compose.postgres-replication.yml  docker-compose.redis.yml  docker-compose.yml  jaeger-v2.yml  notes.txt  prometheus.yml  redis-server.lnk  scan-localization-migration.ps1  update-csproj.ps1  update-validators-localization.ps1
.claude/: settings.local.json
.github/: copilot-instructions.md
Doc/: 00_START_HERE.md  ADDING_VARIABLES_TO_TENANT_CONFIGURATION.md  AI_SERVICE_CHAT_INTEGRATION_GUIDE.md  AI_SERVICE_MIGRATION_GUIDE.md  AI_SERVICE_OVERVIEW.md  API_GATEWAY_GUIDE.md  (+154 more)
src/Shared/ihsandev_shared/: pyproject.toml
src/Shared/ihsandev_shared/ihsandev_shared/: __init__.py  config.py  database.py  exceptions.py  logger.py  security.py
src/Shared/ihsandev_shared/ihsandev_shared.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/Shared/ihsandev_shared/ihsandev_shared/clients/: __init__.py  base_client.py  file_manager_client.py
(+916 files in other folders)
