[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ihsandev-shared"
version = "1.0.0"
description = "Shared Python utilities for IhsanDev microservices (mirrors .NET Shared libraries)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "PyJWT>=2.8.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.3.0",
    "asyncpg>=0.29.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ihsandev_shared*"]
